Many to Many Django.txt
Many to Many Relationship in Django:-
-------------------------------------------------------------
Student - Course
---------------------------------
class Student(models.Model):
    name=models.CharField(max_length=100,null=False,blank=False)
    age=models.IntegerField()
    mobileno=models.CharField(max_length=20)
    dob=models.DateField(null=True,blank=True)
    pic=models.ImageField(null=True,blank=True)
    created_date=models.DateTimeField(auto_now_add=True)
    last_modified_date=models.DateTimeField(auto_now=True)
    def __str__(self):
        return self.name

class Course(models.Model):
    name=models.CharField(max_length=100)
    students=models.ManyToManyField(Student,null=True,blank=True)
    def __str__(self):
        return self.name
---------------------------------------------------------------------------------------------------
Student amit and ashish enroll in python
s1=Student.objects.get(id=1)
s1.name --> 'Amit Kumar'
s2=Student.objects.get(id=3)
s2.name ='ashish'
c=Course.objects.get(id=1)
c.name -- 'python'
c.students.add(s1,s2)  ->> BOTH STUDENT ENROLL IN PYTHON COURSE.
------------------------------------------------------------------------------------------------------------------
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from SMS.models import *   
>>> c=Course()
>>> c.name='Python' 
>>> c.save)
  File "<console>", line 1
    c.save)
          ^
SyntaxError: unmatched ')'
>>> c.save()
>>> c.name='Dot Net' 
>>> c.save()
>>> c.name='Java'    
>>> c.save()
>>> c.name='Python'
>>> c.save()
>>> c1=Course()
>>> c1.name='Dot Net' 
>>> c1.save()
>>> c2=Course()
>>> c2.name='Java' 
>>> c2.save()
>>> c3.name='Angular' 
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'c3' is not defined
>>> c3=Course()       
>>> c3.name='Angular' 
>>> c3.save()
>>> c5=Course()
>>> c5.name='React' 
>>> c5.save()
>>> s1=Student.objects.get(id=1) 
>>> s1.name
'Amit Kumar'
>>> s2=Student.objects.get(id=3) 
>>> s2.name
'ashish'
>>> c=Course.objects.get(id=1) 
>>> c.name
'Python'
>>> c.students.add(s1,s2) 
>>> s2.name
'ashish'
>>> s3=Student.objects.get(id=2) 
>>> s3.name
'anup'
>>> c=Course.objects.get(id=2) 
>>> c.nmae
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Course' object has no attribute 'nmae'
>>> c.name
'Dot Net'
>>> c.students.add(s2,s3) 
>>> s1.name
'Amit Kumar'
>>> s2.name
'ashish'
>>> s3.name
'anup'
>>> s4=Student.objects.get(id=4) 
>>> s4.name
'bhanu singh'
>>> c=Course.objects.get(id=3) 
>>> c.name
'Java'
>>> c.students.add(s1,s2,s3,s4) 
>>> s1.name
'Amit Kumar'
>>> s5=Student.objects.get(id=5) 
>>> s5.name
'kartik'
>>> c=Course.objects.get(id=4) 
>>> c.name
'Angular'
>>> c.students.add(s1,s5) 
>>> s2.name
'ashish'
>>> s1.name
'Amit Kumar'
>>> s3.name
'anup'
>>> s4.name
'bhanu singh'
>>> c=Course.objects.get(id=5) 
>>> c.name
'React'
>>> c.students.add(s3,s4) 
-------------------------------------------------------------------------------------------------
select * from course  -> MYSQL
course.objects.all()-----------------------
-----------------------------------------------------
def view_getstudentcoursedetails(request):
    if request.method=='GET':
        allc=Course.objects.all()
        d1={'courses':allc}
        resp=render(request,'SMS/course.html',context=d1)
        return resp
    elif request.method=='POST':
        pass
----------------------------------------------------------------
<!DOCTYPE html>
<html lang="en">
<head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>COURSE</title>
</head>
<body bgcolor="yellow">
    <h1>***COURSE WISE STUDENT DETAILS***</h1>
    Select Course:
    <select>
        {% for course in courses %}
        <option value="{{course.id}}">{{course.name}}</option>
        {% endfor %}
    </select>
    <button type="submit">Show Student Details</button>
    <br/><br/>
    <table border="3" bgcolor="pink">
        <tr>
        <th>S.NO</th>
        <th>NAME</th>
        <th>MOBILE NO</th>
        <th>DATE</th>
        </tr>
        <tr>
            <td></td>
            <td></td>
            <td></td>
            <td></td>
        </tr>
    </table>
</body>
</html>
--------------------------------------------------------------------
from django.urls import path
from .views import *
#Base URL => http://127.0.0.1:8000/sms/

urlpatterns = [
path('payment/',get_payment_details),
path('course/',view_getstudentcoursedetails),
]
--------------------------------------------------------------------------------------
class Course(models.Model):
    name=models.CharField(max_length=100)
    students=models.ManyToManyField(Student,null=True,blank=True)
    def __str__(self):
        return self.name
------------------------------------------------------------------------------------------------


























